fix routes, make navigation through pages, refactor styles

--- a/become-a-partner/become-a-partner.html
+++ b/become-a-partner/become-a-partner.html
@@ -8,13 +8,15 @@
     <meta name="keywords" content="html, html5, css, css3, bootstrap">
     <title>Latte Minds</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <link rel="stylesheet" href="/become-a-partner/become-a-partner.css">
+    <link rel="stylesheet" href="/latte-mind/become-a-partner/become-a-partner.css">
 </head>
 <body>
     <nav class="navbar navbar-default header">
         <div class="container-fluid">
             <div class="navbar-header">
-              <img class="logo" src="/assets/logo.svg" alt="логотип latte-mind">
+                <a class="logo-link" href="/latte-mind//main-page/main-page.html">
+                    <img class="logo" src="/latte-mind/assets/logo.svg" class="logo" alt="логотип latte-mind">
+                </a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only"></span>
                     <span class="icon-bar"></span>
@@ -26,10 +28,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <div class="overlay"></div>
                 <ul class="nav navbar-nav navbar-right navbar-top">
-                    <li class="nav__item"><a class="nav__link" href="#">Стать партнером</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Партнеры</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Условия</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Обратная связь</a></li>
+                    <li class="nav__item"><a class="nav__link" href="/latte-mind//become-a-partner/become-a-partner.html">Стать партнером</a></li>
+                    <li class="nav__item"><a class="nav__link" href="/latte-mind//partner-page/partner-page.html">Партнеры</a></li>
+                    <li class="nav__item"><a class="nav__link" href="/latte-mind//conditions/conditions.html">Условия</a></li>
+                    <li class="nav__item"><a class="nav__link" href="/latte-mind//feedback/feedback.html">Обратная связь</a></li>
                 </ul>
             </div>
         </div>
@@ -47,27 +49,25 @@
                 <div class="cup-of-coffee"></div>
                 <div class="bottom-intro-vector"></div>
             </div>
-            <img src="/assets/become-a-partner/cups-on-blue.svg" class="block-container__img" alt="cups of coffee on a blue background">
+            <img src="/latte-mind/assets/become-a-partner/cups-on-blue.svg" class="block-container__img" alt="cups of coffee on a blue background">
 
-            <img src="/assets/become-a-partner/coffee-cup-on-beige.svg" class="block-container__img" alt="a cup of coffee on a beige background">
+            <img src="/latte-mind/assets/become-a-partner/coffee-cup-on-beige.svg" class="block-container__img" alt="a cup of coffee on a beige background">
             <div class="block-container__article offers">
                 <h2 class="block-container__title title-mobile">Что мы предлагаем вам</h2>
                 <p class="block-container__subtitle">Каждый партнер, присоединяясь к нам, обязуется предоставить скидку на любой кофе при предъявлении нашего купона в формате QR-кода или штрихкода. Наш менеджер тщательно оценит качество кофе, сервис и уют вашего заведения. Если наше посещение вашего заведения покажется вдохновляющим, мы сделаем вам предложение о включении в наш каталог.</p>
                 <div class="block-container__conditions">
-                    <img src="/assets/become-a-partner/advertise-icon-mob.svg" class="block-container__conditions-img_mobile" alt="cups of coffee on a blue background">
-                    <img src="/assets/become-a-partner/advertise-icon.svg" class="block-container__conditions-img_desktop" alt="cups of coffee on a blue background">
+                    <img src="/latte-mind/assets/become-a-partner/advertise-icon-mob.svg" class="block-container__conditions-img_mobile" alt="cups of coffee on a blue background">
+                    <img src="/latte-mind/assets/become-a-partner/advertise-icon.svg" class="block-container__conditions-img_desktop" alt="cups of coffee on a blue background">
                     <h3 class="block-container__conditions-title">Бесплатная реклама</h3>
                     <p class="block-container__conditions-subtitle">Реклама вашего заведения на нашем сайте, привлекая внимание ценителей кофе и гурманов.</p>
                 </div>
                 <div class="block-container__conditions">
-                    <img src="/assets/become-a-partner/rating-icon-mob.svg" class="block-container__conditions-img_mobile" alt="cups of coffee on a blue background">
-                    <img src="/assets/become-a-partner/rating-icon.svg" class="block-container__conditions-img_desktop" alt="cups of coffee on a blue background">
+                    <img src="/latte-mind/assets/become-a-partner/rating-icon-mob.svg" class="block-container__conditions-img_mobile" alt="cups of coffee on a blue background">
+                    <img src="/latte-mind/assets/become-a-partner/rating-icon.svg" class="block-container__conditions-img_desktop" alt="cups of coffee on a blue background">
                     <h3 class="block-container__conditions-title">Отзывы и рейтинг</h3>
                     <p class="block-container__conditions-subtitle">Сбор отзывов и формирование рейтинга, что поможет вам привлечь еще больше посетителей и укрепить вашу репутацию.</p>
                 </div>
             </div>
-
-            <!-- <div class="block-container__form-container"> -->
             <h2 class="block-container__form-title mobile-title">Стать партнером</h2>
             <div class="top-form-vector" id="top-form-vector"></div>
             <form class="block-container__form">
@@ -84,8 +84,7 @@
                 </div>
                 <button type="submit" class="btn btn-default">Отправить</button>
             </form>
-            <img src="/assets/become-a-partner/pouring-milk-in-cup.svg" class="block-container__img" alt="painting with milk on coffee in a cup">
-        <!-- </div> -->
+            <img src="/latte-mind/assets/become-a-partner/pouring-milk-in-cup.svg" class="block-container__img" alt="painting with milk on coffee in a cup">
             <div class="bottom-right-vector"></div>
         </section>
         <div class="bottom-coffee-beans-vector"></div>
@@ -95,14 +94,16 @@
         <nav class="navbar navbar-default">
           <div class="container-fluid">
             <div class="navbar-footer">
-                <img class="logo" src="/assets/logo.svg" alt="логотип latte-mind">
+                <a class="logo-link" href="/latte-mind/main-page/main-page.html">
+                    <img class="logo" src="/latte-mind/assets/logo.svg" class="logo" alt="логотип latte-mind">
+                </a>
             </div>
             <p class="navbar-text">&copy; 2024 Latte Minds</p>
             <ul class="nav navbar-nav navbar-right">
-              <li class="nav__item"><a class="nav__link" href="#">Стать партнером</a></li>
-              <li class="nav__item"><a class="nav__link" href="#">Партнеры</a></li>
-              <li class="nav__item"><a class="nav__link" href="#">Условия</a></li>
-              <li class="nav__item"><a class="nav__link" href="#">Обратная связь</a></li>
+                <li class="nav__item"><a class="nav__link" href="/latte-mind//become-a-partner/become-a-partner.html">Стать партнером</a></li>
+                <li class="nav__item"><a class="nav__link" href="/latte-mind//partner-page/partner-page.html">Партнеры</a></li>
+                <li class="nav__item"><a class="nav__link" href="/latte-mind//conditions/conditions.html">Условия</a></li>
+                <li class="nav__item"><a class="nav__link" href="/latte-mind//feedback/feedback.html">Обратная связь</a></li>
             </ul>
           </div>
       </nav>
