--- a/feedback/feedback.html
+++ b/feedback/feedback.html
@@ -8,14 +8,16 @@
     <meta name="keywords" content="html, html5, css, css3, bootstrap">
     <title>Latte Minds</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <link rel="stylesheet" href="/feedback/feedback.css">
+    <link rel="stylesheet" href="/latte-mind/feedback/feedback.css">
 </head>
 <body>
     <nav class="navbar navbar-default header">
         <div class="navbar-vector"></div>
         <div class="container-fluid">
             <div class="navbar-header">
-              <img class="logo" src="/assets/logo.svg" alt="логотип latte-mind">
+                <a class="logo-link" href="/latte-mind/main-page/main-page.html">
+                    <img class="logo" src="/latte-mind/assets/logo.svg" class="logo" alt="логотип latte-mind">
+                </a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only"></span>
                     <span class="icon-bar"></span>
@@ -27,10 +29,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <div class="overlay"></div>
                 <ul class="nav navbar-nav navbar-right navbar-top">
-                    <li class="nav__item"><a class="nav__link" href="#">Стать партнером</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Партнеры</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Условия</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Обратная связь</a></li>
+                    <li class="nav__item"><a class="nav__link" href="/latte-mind/become-a-partner/become-a-partner.html">Стать партнером</a></li>
+                    <li class="nav__item"><a class="nav__link" href="/latte-mind/partner-page/partner-page.html">Партнеры</a></li>
+                    <li class="nav__item"><a class="nav__link" href="/latte-mind/conditions/conditions.html">Условия</a></li>
+                    <li class="nav__item"><a class="nav__link" href="/latte-mind/feedback/feedback.html">Обратная связь</a></li>
                 </ul>
             </div>
         </div>
@@ -53,11 +55,11 @@
                 </ul>
                 <ul class="location-info__list mobile-list">
                     <li class="location-info__item">
-                        <img class="email-icon" src="/assets/feedback/email-icon.svg" alt="иконка email">
+                        <img class="email-icon" src="/latte-mind/assets/feedback/email-icon.svg" alt="иконка email">
                         latteminds@mail.ru
                     </li>
                     <li class="location-info__item phone-item">
-                        <img class="phone-icon" src="/assets/feedback/phone-icon.svg" alt="иконка телефона">
+                        <img class="phone-icon" src="/latte-mind/assets/feedback/phone-icon.svg" alt="иконка телефона">
                         +7 999 250 8715
                     </li>
                     <h2 class="location-info__title mobile-title no-padding">Юридический адрес:</h2>
@@ -94,14 +96,16 @@
         <nav class="navbar navbar-default">
           <div class="container-fluid">
             <div class="navbar-footer">
-                <img class="logo" src="/assets/logo.svg" alt="логотип latte-mind">
+                <a class="logo-link" href="/latte-mind//main-page/main-page.html">
+                    <img class="logo" src="/latte-mind/assets/logo.svg" class="logo" alt="логотип latte-mind">
+                </a>
             </div>
             <p class="navbar-text">&copy; 2024 Latte Minds</p>
             <ul class="nav navbar-nav navbar-right">
-              <li class="nav__item"><a class="nav__link" href="#">Стать партнером</a></li>
-              <li class="nav__item"><a class="nav__link" href="#">Партнеры</a></li>
-              <li class="nav__item"><a class="nav__link" href="#">Условия</a></li>
-              <li class="nav__item"><a class="nav__link" href="#">Обратная связь</a></li>
+                <li class="nav__item"><a class="nav__link" href="/latte-mind/become-a-partner/become-a-partner.html">Стать партнером</a></li>
+                <li class="nav__item"><a class="nav__link" href="/latte-mind/partner-page/partner-page.html">Партнеры</a></li>
+                <li class="nav__item"><a class="nav__link" href="/latte-mind/conditions/conditions.html">Условия</a></li>
+                <li class="nav__item"><a class="nav__link" href="/latte-mind/feedback/feedback.html">Обратная связь</a></li>
             </ul>
           </div>
       </nav>
