--- a/partner-page/partner-page.html
+++ b/partner-page/partner-page.html
@@ -8,15 +8,15 @@
     <meta name="keywords" content="html, html5, css, css3, bootstrap">
     <title>Latte Minds</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <link rel="stylesheet" href="/latte-mind/partner-page/partner-page.css">
+    <link rel="stylesheet" href="./partner-page.css">
 </head>
 <body>
     <nav class="navbar navbar-default header">
         <div class="navbar-vector"></div>
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="logo-link" href="/latte-mind/main-page/main-page.html">
-                    <img class="logo" src="/latte-mind/assets/logo.svg" class="logo" alt="логотип latte-mind">
+                <a class="logo-link" href="../main-page/main-page.html">
+                    <img class="logo" src="../assets/logo.svg" class="logo" alt="логотип latte-mind">
                 </a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only"></span>
@@ -29,10 +29,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <div class="overlay"></div>
                 <ul class="nav navbar-nav navbar-right navbar-top">
-                    <li class="nav__item"><a class="nav__link" href="/latte-mind/become-a-partner/become-a-partner.html">Стать партнером</a></li>
-                    <li class="nav__item"><a class="nav__link" href="/latte-mind/partner-page/partner-page.html">Партнеры</a></li>
-                    <li class="nav__item"><a class="nav__link" href="/latte-mind/conditions/conditions.html">Условия</a></li>
-                    <li class="nav__item"><a class="nav__link" href="/latte-mind/feedback/feedback.html">Обратная связь</a></li>
+                    <li class="nav__item"><a class="nav__link" href="../become-a-partner/become-a-partner.html">Стать партнером</a></li>
+                    <li class="nav__item"><a class="nav__link" href="../partner-page/partner-page.html">Партнеры</a></li>
+                    <li class="nav__item"><a class="nav__link" href="../conditions/conditions.html">Условия</a></li>
+                    <li class="nav__item"><a class="nav__link" href="../feedback/feedback.html">Обратная связь</a></li>
                 </ul>
             </div>
         </div>
@@ -55,7 +55,7 @@
                             </ul>
                             <p class="partner-info__score">4.5&nbsp;<span class="partner-info__total-reviews">(15 оценок)</span></p>
                         </div>
-                        <img class="partner-info__img" src="/latte-mind/assets/partner-page/skuratov.svg" alt="фото вывески кофейни Skuratov">
+                        <img class="partner-info__img" src="../assets/partner-page/skuratov.svg" alt="фото вывески кофейни Skuratov">
                     </div>
                     <p class="partner-info__about">Добро пожаловать в мир кофейного удовольствия! Приобретите купон на скидку и наслаждайтесь вкусом кофе в любое удобное время в течение месяца. Вас ждут уютные кофейни в самом центре города. Насладитесь истинным вкусом кофе, не теряя времени в перерывах и на ходу. Приходите к нам и получите заряд энергии для продуктивного дня!</p>
                     <p class="partner-info__reviews">Читать отзывы</p>
@@ -99,11 +99,11 @@
                 </ul>
                 <ul class="location-info__list mobile-list">
                     <li class="location-info__item">
-                        <img class="email-icon" src="/latte-mind/assets/feedback/email-icon.svg" alt="иконка email">
+                        <img class="email-icon" src="../assets/feedback/email-icon.svg" alt="иконка email">
                         cafe@mail.ru
                     </li>
                     <li class="location-info__item phone-item">
-                        <img class="phone-icon" src="/latte-mind/assets/feedback/phone-icon.svg" alt="иконка телефона">
+                        <img class="phone-icon" src="../assets/feedback/phone-icon.svg" alt="иконка телефона">
                         +7 (999)111 22 33
                     </li>
                     <h2 class="location-info__title mobile-title no-padding">Юридический адрес:</h2>
@@ -223,16 +223,16 @@
         <nav class="navbar navbar-default">
           <div class="container-fluid">
             <div class="navbar-footer">
-                <a class="logo-link" href="/latte-mind/main-page/main-page.html">
-                    <img class="logo" src="/latte-mind/assets/logo.svg" class="logo" alt="логотип latte-mind">
+                <a class="logo-link" href="../main-page/main-page.html">
+                    <img class="logo" src="../assets/logo.svg" class="logo" alt="логотип latte-mind">
                 </a>
             </div>
             <p class="navbar-text">&copy; 2024 Latte Minds</p>
             <ul class="nav navbar-nav navbar-right">
-                <li class="nav__item"><a class="nav__link" href="/latte-mind/become-a-partner/become-a-partner.html">Стать партнером</a></li>
-                <li class="nav__item"><a class="nav__link" href="/latte-mind/partner-page/partner-page.html">Партнеры</a></li>
-                <li class="nav__item"><a class="nav__link" href="/latte-mind/conditions/conditions.html">Условия</a></li>
-                <li class="nav__item"><a class="nav__link" href="/latte-mind/feedback/feedback.html">Обратная связь</a></li>
+                <li class="nav__item"><a class="nav__link" href="../become-a-partner/become-a-partner.html">Стать партнером</a></li>
+                <li class="nav__item"><a class="nav__link" href="../partner-page/partner-page.html">Партнеры</a></li>
+                <li class="nav__item"><a class="nav__link" href="../conditions/conditions.html">Условия</a></li>
+                <li class="nav__item"><a class="nav__link" href="../feedback/feedback.html">Обратная связь</a></li>
             </ul>
           </div>
       </nav>
