--- a/conditions/conditions.html
+++ b/conditions/conditions.html
@@ -8,15 +8,15 @@
     <meta name="keywords" content="html, html5, css, css3, bootstrap">
     <title>Latte Minds</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <link rel="stylesheet" href="/latte-mind/conditions/conditions.css">
+    <link rel="stylesheet" href="./conditions.css">
 </head>
 <body>
     <nav class="navbar navbar-default header">
         <div class="navbar-vector"></div>
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="logo-link" href="/latte-mind/main-page/main-page.html">
-                    <img class="logo" src="/latte-mind/assets/logo.svg" class="logo" alt="логотип latte-mind">
+                <a class="logo-link" href="../main-page/main-page.html">
+                    <img class="logo" src="../assets/logo.svg" class="logo" alt="логотип latte-mind">
                 </a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only"></span>
@@ -29,10 +29,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <div class="overlay"></div>
                 <ul class="nav navbar-nav navbar-right navbar-top">
-                    <li class="nav__item"><a class="nav__link" href="/latte-mind/become-a-partner/become-a-partner.html">Стать партнером</a></li>
-                    <li class="nav__item"><a class="nav__link" href="/latte-mind/partner-page/partner-page.html">Партнеры</a></li>
-                    <li class="nav__item"><a class="nav__link" href="/latte-mind/conditions/conditions.html">Условия</a></li>
-                    <li class="nav__item"><a class="nav__link" href="/latte-mind/feedback/feedback.html">Обратная связь</a></li>
+                    <li class="nav__item"><a class="nav__link" href="../become-a-partner/become-a-partner.html">Стать партнером</a></li>
+                    <li class="nav__item"><a class="nav__link" href="../partner-page/partner-page.html">Партнеры</a></li>
+                    <li class="nav__item"><a class="nav__link" href="../conditions/conditions.html">Условия</a></li>
+                    <li class="nav__item"><a class="nav__link" href="../feedback/feedback.html">Обратная связь</a></li>
                 </ul>
             </div>
         </div>
@@ -46,41 +46,41 @@
         <div class="conditions__container">
             <div class="grid-container">
                 <div class="grid-item align-right">
-                    <img src="/latte-mind/assets/conditions/discount-icon.svg" class="desktop-img" alt="discount coupon with % sign">
-                    <img src="/latte-mind/assets/conditions/discount-icon-mob.svg" class="mobile-img" alt="discount coupon with % sign">
+                    <img src="../assets/conditions/discount-icon.svg" class="desktop-img" alt="discount coupon with % sign">
+                    <img src="../assets/conditions/discount-icon-mob.svg" class="mobile-img" alt="discount coupon with % sign">
                     <h2 class="grid-item__title">Скидка на кофе</h2>
                     <p class="grid-item__subtitle">Купон позволяет получить скидку на кофе в любой кофейне или ресторане из нашего каталога.</p>
                 </div>
                 <div class="grid-item large-img">
-                    <img src="../latte-mind/assets/conditions/cup-with-qr.svg" alt="cup of coffee with QR-code">
+                    <img src="../assets/conditions/cup-with-qr.svg" alt="cup of coffee with QR-code">
                 </div>
                 <div class="grid-item align-left">
-                    <img src="/latte-mind/assets/conditions/qr-icon.svg" class="desktop-img" alt="qr-icon">
-                    <img src="/latte-mind/assets/conditions/qr-icon-mob.svg" class="mobile-img" alt="discount coupon with % sign">
+                    <img src="../assets/conditions/qr-icon.svg" class="desktop-img" alt="qr-icon">
+                    <img src="../assets/conditions/qr-icon-mob.svg" class="mobile-img" alt="discount coupon with % sign">
                     <h2 class="grid-item__title">Купон — это QR-код</h2>
                     <p class="grid-item__subtitle">Купон — это картинка (QR-код или штрихкод), которая высылается на почтовый ящик после оплаты на сайте.</p>
                 </div>
                 <div class="grid-item align-right">
-                    <img src="/latte-mind/assets/conditions/calendar-icon.svg" class="desktop-img" alt="calendar icon">
-                    <img src="/latte-mind/assets/conditions/calendar-icon-mob.svg" class="mobile-img" alt="calendar icon">
+                    <img src="../assets/conditions/calendar-icon.svg" class="desktop-img" alt="calendar icon">
+                    <img src="../assets/conditions/calendar-icon-mob.svg" class="mobile-img" alt="calendar icon">
                     <h2 class="grid-item__title">Срок действия купона</h2>
                     <p class="grid-item__subtitle">Купон действует в течение текущего календарного месяца, независимо от того, когда был куплен. Первого числа месяца происходит обновление купона</p>
                 </div>
                 <div class="grid-item align-left">
-                    <img src="/latte-mind/assets/conditions/tick-icon.svg" class="desktop-img" alt="tick icon">
-                    <img src="/latte-mind/assets/conditions/tick-icon-mob.svg" class="mobile-img" alt="calendar icon">
+                    <img src="../assets/conditions/tick-icon.svg" class="desktop-img" alt="tick icon">
+                    <img src="../assets/conditions/tick-icon-mob.svg" class="mobile-img" alt="calendar icon">
                     <h2 class="grid-item__title">Это не подписка</h2>
                     <p class="grid-item__subtitle">Оплата это не подписка, карта нигде не сохраняется — только разовая оплата.</p>
                 </div>                
                 <div class="grid-item align-right">
-                    <img src="/latte-mind/assets/conditions/cup-icon.svg" class="desktop-img" alt="cup with a hot beverage icon">
-                    <img src="/latte-mind/assets/conditions/cup-icon-mob.svg" class="mobile-img" alt="calendar icon">
+                    <img src="../assets/conditions/cup-icon.svg" class="desktop-img" alt="cup with a hot beverage icon">
+                    <img src="../assets/conditions/cup-icon-mob.svg" class="mobile-img" alt="calendar icon">
                     <h2 class="grid-item__title">Стоимость купона = кружка кофе</h2>
                     <p class="grid-item__subtitle">Стоимость купона сроком на месяц на неограниченное количество кофе — 250 рублей. Средняя стоимость кофе — 280 рублей.</p>
                 </div>
                 <div class="grid-item align-left">
-                    <img src="/latte-mind/assets/conditions/discount-25-icon.svg" class="desktop-img" alt="a coupon for 25-50% discount">
-                    <img src="/latte-mind/assets/conditions/discount-25-icon-mob.svg" class="mobile-img" alt="calendar icon">
+                    <img src="../assets/conditions/discount-25-icon.svg" class="desktop-img" alt="a coupon for 25-50% discount">
+                    <img src="../assets/conditions/discount-25-icon-mob.svg" class="mobile-img" alt="calendar icon">
                     <h2 class="grid-item__title">Скидка от 25% до 50%</h2>
                     <p class="grid-item__subtitle">Скидки на кофе в кофейнях от 25% до 50%, в ресторане — бесплатный кофе или скидка 50% при заказе бизнес-ланча.</p>
                 </div>
@@ -98,16 +98,16 @@
         <nav class="navbar navbar-default">
           <div class="container-fluid">
             <div class="navbar-footer">
-                <a class="logo-link" href="/latte-mind/main-page/main-page.html">
-                    <img class="logo" src="/latte-mind/assets/logo.svg" class="logo" alt="логотип latte-mind">
+                <a class="logo-link" href="../main-page/main-page.html">
+                    <img class="logo" src="../assets/logo.svg" class="logo" alt="логотип latte-mind">
                 </a>
             </div>
             <p class="navbar-text">&copy; 2024 Latte Minds</p>
             <ul class="nav navbar-nav navbar-right">
-                <li class="nav__item"><a class="nav__link" href="/latte-mind/become-a-partner/become-a-partner.html">Стать партнером</a></li>
-                <li class="nav__item"><a class="nav__link" href="/latte-mind/partner-page/partner-page.html">Партнеры</a></li>
-                <li class="nav__item"><a class="nav__link" href="/latte-mind/conditions/conditions.html">Условия</a></li>
-                <li class="nav__item"><a class="nav__link" href="/latte-mind/feedback/feedback.html">Обратная связь</a></li>
+                <li class="nav__item"><a class="nav__link" href="../become-a-partner/become-a-partner.html">Стать партнером</a></li>
+                <li class="nav__item"><a class="nav__link" href="../partner-page/partner-page.html">Партнеры</a></li>
+                <li class="nav__item"><a class="nav__link" href="../conditions/conditions.html">Условия</a></li>
+                <li class="nav__item"><a class="nav__link" href="../feedback/feedback.html">Обратная связь</a></li>
             </ul>
           </div>
       </nav>
