--- a/main-page/main-page.html
+++ b/main-page/main-page.html
@@ -8,15 +8,15 @@
     <meta name="keywords" content="html, html5, css, css3, bootstrap3.4">
     <title>Latte Minds</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <link rel="stylesheet" href="/latte-mind/main-page/main-page.css">
+    <link rel="stylesheet" href="./main-page.css">
 </head>
 <body>
   <nav class="navbar navbar-default header">
     <div class="navbar-vector"></div>
     <div class="container-fluid">
         <div class="navbar-header">
-          <a class="logo-link" href="/latte-mind/main-page/main-page.html">
-            <img class="logo" src="/latte-mind/assets/logo.svg" class="logo" alt="логотип latte-mind">
+          <a class="logo-link" href="./main-page.html">
+            <img class="logo" src="../assets/logo.svg" class="logo" alt="логотип latte-mind">
           </a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only"></span>
@@ -29,10 +29,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <div class="overlay"></div>
             <ul class="nav navbar-nav navbar-right navbar-top">
-                <li class="nav__item"><a class="nav__link" href="/latte-mind//become-a-partner/become-a-partner.html">Стать партнером</a></li>
-                <li class="nav__item"><a class="nav__link" href="/latte-mind//partner-page/partner-page.html">Партнеры</a></li>
-                <li class="nav__item"><a class="nav__link" href="/latte-mind//conditions/conditions.html">Условия</a></li>
-                <li class="nav__item"><a class="nav__link" href="/latte-mind//feedback/feedback.html">Обратная связь</a></li>
+              <li class="nav__item"><a class="nav__link" href="../become-a-partner/become-a-partner.html">Стать партнером</a></li>
+              <li class="nav__item"><a class="nav__link" href="../partner-page/partner-page.html">Партнеры</a></li>
+              <li class="nav__item"><a class="nav__link" href="../conditions/conditions.html">Условия</a></li>
+              <li class="nav__item"><a class="nav__link" href="../feedback/feedback.html">Обратная связь</a></li>
             </ul>
         </div>
     </div>
@@ -41,7 +41,7 @@
     <section class="welcome">
         <article class="welcome__container">
             <div class="welcome__background-vector-right"></div>
-            <img class="welcome__img" src="/latte-mind/assets/main-page/main-welcome-photo.png" alt="фото стаканчика с кофе, в который наливают молоко">
+            <img class="welcome__img" src="../assets/main-page/main-welcome-photo.png" alt="фото стаканчика с кофе, в который наливают молоко">
             <div class="welcome__info-container">
                 <h1 class="welcome__title">добро пожаловать в мир кофейного удовольствия!</h1>
                 <p class="welcome__subtitle">Приобретите купон на скидку и наслаждайтесь вкусом кофе в любое удобное время в течение месяца. Вас ждут уютные кофейни в самом центре города. Насладитесь истинным вкусом кофе, не теряя времени в перерывах и на ходу.</p>
@@ -74,7 +74,7 @@
         </nav>
         <!-- галерея для ширины > 480px-->
         <article class="partners__item">
-          <img class="partners__img" src="/latte-mind/assets/main-page/akademia.jpg" alt="фото кофейни Академия кофе">
+          <img class="partners__img" src="../assets/main-page/akademia.jpg" alt="фото кофейни Академия кофе">
           <h3 class="partners__name">Название</h3>
           <ul class="partners__rating">
             <li class="partners__star"></li>
@@ -87,7 +87,7 @@
           <div class="partners__review">Отзывы</div>
         </article>
         <article class="partners__item">
-          <img class="partners__img" src="/latte-mind/assets/main-page/capital-of-siberia.jpg" alt="фото кофейни Capital of Siberia">
+          <img class="partners__img" src="../assets/main-page/capital-of-siberia.jpg" alt="фото кофейни Capital of Siberia">
           <h3 class="partners__name">Название</h3>
           <ul class="partners__rating">
             <li class="partners__star"></li>
@@ -100,7 +100,7 @@
           <div class="partners__review">Отзывы</div>
         </article>
         <article class="partners__item">
-          <img class="partners__img" src="/latte-mind/assets/main-page/blackwood.jpg" alt="фото кофейни Blackwood">
+          <img class="partners__img" src="../assets/main-page/blackwood.jpg" alt="фото кофейни Blackwood">
           <h3 class="partners__name">Название</h3>
           <ul class="partners__rating">
             <li class="partners__star"></li>
@@ -113,7 +113,7 @@
           <div class="partners__review">Отзывы</div>
         </article>
         <article class="partners__item">
-          <img class="partners__img" src="/latte-mind/assets/main-page/skuratov.jpg" alt="фото кофейни Skuratov coffee roasters">
+          <img class="partners__img" src="../assets/main-page/skuratov.jpg" alt="фото кофейни Skuratov coffee roasters">
           <h3 class="partners__name">Название</h3>
           <ul class="partners__rating">
             <li class="partners__star"></li>
@@ -137,7 +137,7 @@
           <div class="carousel-inner" role="listbox">
             <div class="item active">
               <article class="partners__item">
-                <img class="partners__img" src="/latte-mind/assets/main-page/akademia.jpg" alt="фото кофейни Академия кофе">
+                <img class="partners__img" src="../assets/main-page/akademia.jpg" alt="фото кофейни Академия кофе">
                 <h3 class="partners__name">Название</h3>
                 <ul class="partners__rating">
                   <li class="partners__star"></li>
@@ -152,7 +152,7 @@
             </div>
             <div class="item">
               <article class="partners__item">
-                <img class="partners__img" src="/latte-mind/assets/main-page/capital-of-siberia.jpg" alt="фото кофейни Capital of Siberia">
+                <img class="partners__img" src="../assets/main-page/capital-of-siberia.jpg" alt="фото кофейни Capital of Siberia">
                 <h3 class="partners__name">Название</h3>
                 <ul class="partners__rating">
                   <li class="partners__star"></li>
@@ -167,7 +167,7 @@
             </div>
             <div class="item">
               <article class="partners__item">
-                <img class="partners__img" src="/latte-mind/assets/main-page/blackwood.jpg" alt="фото кофейни Blackwood">
+                <img class="partners__img" src="../assets/main-page/blackwood.jpg" alt="фото кофейни Blackwood">
                 <h3 class="partners__name">Название</h3>
                 <ul class="partners__rating">
                   <li class="partners__star"></li>
@@ -182,7 +182,7 @@
             </div>
             <div class="item">
               <article class="partners__item">
-                <img class="partners__img" src="/latte-mind/assets/main-page/skuratov.jpg" alt="фото кофейни Skuratov coffee roasters">
+                <img class="partners__img" src="../assets/main-page/skuratov.jpg" alt="фото кофейни Skuratov coffee roasters">
                 <h3 class="partners__name">Название</h3>
                 <ul class="partners__rating">
                   <li class="partners__star"></li>
@@ -213,16 +213,16 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-footer">
-          <a class="logo-link" href="/latte-mind//main-page/main-page.html">
-            <img class="logo" src="/latte-mind/assets/logo.svg" class="logo" alt="логотип latte-mind">
+          <a class="logo-link" href="../main-page/main-page.html">
+            <img class="logo" src="../assets/logo.svg" class="logo" alt="логотип latte-mind">
           </a>
         </div>
         <p class="navbar-text">&copy; 2024 Latte Minds</p>
         <ul class="nav navbar-nav navbar-right">
-          <li class="nav__item"><a class="nav__link" href="/latte-mind//become-a-partner/become-a-partner.html">Стать партнером</a></li>
-          <li class="nav__item"><a class="nav__link" href="/latte-mind//partner-page/partner-page.html">Партнеры</a></li>
-          <li class="nav__item"><a class="nav__link" href="/latte-mind//conditions/conditions.html">Условия</a></li>
-          <li class="nav__item"><a class="nav__link" href="/latte-mind//feedback/feedback.html">Обратная связь</a></li>
+          <li class="nav__item"><a class="nav__link" href="../become-a-partner/become-a-partner.html">Стать партнером</a></li>
+          <li class="nav__item"><a class="nav__link" href="../partner-page/partner-page.html">Партнеры</a></li>
+          <li class="nav__item"><a class="nav__link" href="../conditions/conditions.html">Условия</a></li>
+          <li class="nav__item"><a class="nav__link" href="../feedback/feedback.html">Обратная связь</a></li>
         </ul>
       </div>
   </nav>
